--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="" class="users">
             <img src="./image/user_icon.png" width="34" alt="User Icon">
         </a>
-        <a href="/html/formulaire.html" class="shopping">
+        <a href="html/formulaire.html" class="shopping">
             <img src="./image/basket_icon.png" width="34" alt="Basket Icon">
         </a>
     </header>
