--- a/html/formulaire.html
+++ b/html/formulaire.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styleFormulaire.css">
+    <link rel="stylesheet" href="../css/styleFormulaire.css">
     <title>Formulaire de Commande</title>
 </head>
 <body>
     <div class="container">
         <div class="shopping-cart">
-            <a href="#" class="continue-shopping">
-                <img src="images/shopping.png" alt="Continue Shopping"> Continuer les achats
+            <a href="../index.html" class="continue-shopping">
+                <img src="../image/shopping.png" alt="Continue Shopping"> Continuer les achats
             </a>
             <h2>Panier d'achat</h2>
             <ul id="cart-items"></ul>
@@ -35,15 +35,15 @@
             </select>
 
             <div class="card-images">
-                <img src="images/visa.png" alt="Visa" id="visa-img">
-                <img src="images/cb.jpg" alt="CB" id="cb-img">
-                <img src="images/maestro.png" alt="Maestro" id="maestro-img">
+                <img src="../image/visa.png" alt="Visa" id="visa-img">
+                <img src="../image/cb.jpg" alt="CB" id="cb-img">
+                <img src="../image/maestro.png" alt="Maestro" id="maestro-img">
             </div>
 
             <button type="submit" class="payment-btn">Payer</button>
         </form>
     </div>
 
-    <script src="js/javascriptFormulaire.js"></script>
+    <script src="../js/javascriptFormulaire.js"></script>
 </body>
 </html>
