--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="author" content="Jean Paul Gautier">
         <meta name="description" content="SEO">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="./css/index.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
 
