--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <html lang="fr-FR">
     <head>
-        <title> Jean Paul Gautier </title>
-        <meta name="author" content="Jean Paul Gautier">
+        <title> Jean Paul Gaultier </title>
+        <meta name="author" content="Jean Paul Gaultier">
         <meta name="description" content="SEO">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/index.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
 
     </head>
     <body>
         <header>
             <img src="./image/JPG.png">
             <nav>
-                <a href="#"><span >Catalogue </span></a>
-                <a href="#"><span >Homme </span></a>
-                <a href="#"><span >Femme </span></a>
-                <a href="#"><span >Meet-up </span></a>
+              <a href="#"><span >Collections </span></a>
+              <a href="#"><span >Parfums Homme </span></a>
+              <a href="#"><span >Parfums Femme </span></a>
+              <a href="#"><span >Événements </span></a>
             </nav>
             <form>
                 <input type="search">
@@ -33,157 +34,191 @@
            <aside>
 
               <video  src="./image/videoplayback.mp4" autoplay loop muted > </video>
-              <button id="catalogue"> <a href="#catalogue"> Decouvrez notre nouvelle collection </a> </button>
+              <button id="catalogue"> <a href="#catalogue"> Decouvrez Jean Paul Gaultier <i class="fa-solid fa-arrow-right" style="color: #ff1a1a;"></i>  </a> </button>
            </aside>
-           <h2>  J.PAULGAUTIER GAUTIERPAUL GAUTIERPAUL GAUTIERPAUL GAUTIERPAUL GAUTIERPAUL GAUTIER</h2>
+           <h2>  JEAN PAUL GAULTIER GAULTIERPAUL GAULTIERPAUL GAULTIERPAUL GAULTIERPAUL GAULTIERPAUL GAULTIER</h2>
            <section >
-            <article>
-                <h6> Un choc olfactif : addictif et sensuel  </h6>
-                <video src="./image/9530310164510.webm" autoplay loop muted >
-                </video>
-                <div class="description">
-                <span>
-                   <p>SCANDAL POUR HOMME</p>
-                   <p>EAU DE TOILETTE</p>
-                </span>
-                <p> Des 76$</p>
-                </div>
-                <div class="commander">
-                  <button> Decouvrir </button>
-                  <button class="ajouter-panier" id="bouton-1" data-prix="76" data-quantite="0" > Acheter </button>
-                </div>
-            </article>
-            <article>
-                <h6> Un choc olfactif : addictif et sensuel  </h6>
-                <video  src="./image/9697615380510.webm" autoplay loop muted >
-                </video>
-                <div class="description">
-                <span>
-                   <p>SCANDAL POUR HOMME</p>
-                   <p>EAU DE TOILETTE</p>
-                </span>
-                <p> Des 95$</p>
-                </div>
-                <div class="commander">
-                  <button> Decouvrir </button>
-                  <button class="ajouter-panier" id="bouton-2" data-prix="95" data-quantite="0"> Acheter </button>
-                </div>
-            </article>           
-            <article>
-                <h6> Un choc olfactif : addictif et sensuel  </h6>
-                <video  src="./image/9530310164510.webm" autoplay loop muted >
-                </video>
-                <div class="description">
-                <span>
-                   <p>SCANDAL POUR HOMME</p>
-                   <p>EAU DE TOILETTE</p>
-                </span>
-                <p> Des 106$</p>
-                </div>
-                <div class="commander">
-                  <button> Decouvrir </button>
-                  <button class="ajouter-panier" id="bouton-3" data-prix="106"> Acheter </button>
-                </div>
-            </article>
-            <article>
-                <h6> Un choc olfactif : addictif et sensuel  </h6>
-                <video  src="./image/9530310164510.webm" autoplay loop muted >
-                </video>
-                <div class="description">
-                <span>
-                   <p>SCANDAL POUR HOMME</p>
-                   <p>EAU DE TOILETTE</p>
-                </span>
-                <p> Des 56$</p>
-                </div>
-                <div class="commander">
-                  <button> Decouvrir </button>
-                  <button class="ajouter-panier" id="bouton-4" data-prix="56"> Acheter </button>
-                </div>
-            </article>           
-            <article>
-                <h6> Un choc olfactif : addictif et sensuel  </h6>
-                <video  src="./image/9530310164510.webm" autoplay loop muted >
-                </video>
-                <div class="description">
-                <span>
-                   <p>SCANDAL POUR HOMME</p>
-                   <p>EAU DE TOILETTE</p>
-                </span>
-                <p> Des 222$</p>
-                </div>
-                <div class="commander">
-                  <button> Decouvrir </button>
-                  <button class="ajouter-panier" id="bouton-5" data-prix="222"> Acheter </button>
-                </div>
-            </article>
-            <article>
-                <h6> Un choc olfactif : addictif et sensuel  </h6>
-                <video  src="./image/9530310164510.webm" autoplay loop muted >
-                </video>
-                <div class="description">
-                <span>
-                   <p>SCANDAL POUR HOMME</p>
-                   <p>EAU DE TOILETTE</p>
-                </span>
-                <p> Des 83$</p>
-                </div>
-                <div class="commander">
-                  <button> Decouvrir </button>
-                  <button class="ajouter-panier" id="bouton-6" data-prix="83"> Acheter </button>
-                </div>
-            </article>
-            <article>
-                <h6> Un choc olfactif : addictif et sensuel  </h6>
-                <video  src="./image/9530310164510.webm" autoplay loop muted >
-                </video>
-                <div class="description">
-                <span>
-                   <p>SCANDAL POUR HOMME</p>
-                   <p>EAU DE TOILETTE</p>
-                </span>
-                <p> Des 44$</p>
-                </div>
-                <div class="commander">
-                  <button> Decouvrir </button>
-                  <button class="ajouter-panier" id="bouton-7" data-prix="44"> Acheter </button>
-                </div>
-            </article>
-            <article>
-                <h6> Un choc olfactif : addictif et sensuel  </h6>
-                <video  src="./image/9530310164510.webm" autoplay loop muted >
-                </video>
-                <div class="description">
-                <span>
-                   <p>SCANDAL POUR HOMME</p>
-                   <p>EAU DE TOILETTE</p>
-                </span>
-                <p> Des 99$</p>
-                </div>
-                <div class="commander">
-                  <button> Decouvrir </button>
-                  <button class="ajouter-panier" id="bouton-8" data-prix="99"> Acheter </button>
-                </div>
-            </article>
-            <article>
-                <h6> Un choc olfactif : addictif et sensuel  </h6>
-                <video  src="./image/9530310164510.webm" autoplay loop muted >
-                </video>
-                <div class="description">
-                <span>
-                   <p>SCANDAL POUR HOMME</p>
-                   <p>EAU DE TOILETTE</p>
-                </span>
-                <p> Des 201$</p>
-                </div>
-                <div class="commander">
-                  <button> Decouvrir </button>
-                  <button class="ajouter-panier" id="bouton-1" data-prix="201"> Acheter </button>
-                </div>
-            </article>
-          </section>
+
+  <article>
+      <h6>Le Mâle - La puissance de la masculinité capturée dans un flacon</h6>
+      <video src="./image/9530310164510.webm" autoplay loop muted></video>
+      <div class="description">
+          <span>
+              <p>LE MÂLE</p>
+              <p>EAU DE TOILETTE</p>
+          </span>
+          <p>Des 76$</p>
+      </div>
+      <div class="commander">
+          <button> Découvrir </button>
+          <button class="ajouter-panier" id="bouton-1" data-prix="76" data-quantite="0"> Acheter </button>
+      </div>
+  </article>
+  
+  <article>
+      <h6>La Belle - Une symphonie florale envoûtante</h6>
+      <video src="./image/9697615380510.webm" autoplay loop muted></video>
+      <div class="description">
+          <span>
+              <p>LA BELLE</p>
+              <p>EAU DE PARFUM</p>
+          </span>
+          <p>Des 95$</p>
+      </div>
+      <div class="commander">
+          <button> Découvrir </button>
+          <button class="ajouter-panier" id="bouton-2" data-prix="95" data-quantite="0"> Acheter </button>
+      </div>
+  </article>           
+  
+  <article>
+      <h6>Ultra Mâle - L'intensité redéfinie</h6>
+      <video src="./image/9564759359518.webm" autoplay loop muted></video>
+      <div class="description">
+          <span>
+              <p>ULTRA MÂLE</p>
+              <p>EAU DE TOILETTE</p>
+          </span>
+          <p>Des 106$</p>
+      </div>
+      <div class="commander">
+          <button> Découvrir </button>
+          <button class="ajouter-panier" id="bouton-3" data-prix="106" data-quantite="0"> Acheter </button>
+      </div>
+  </article>
+  
+  <article>
+      <h6>Fleur d'Amour - L'amour dans chaque goutte</h6>
+      <video src="./image/9660258451486.webm" autoplay loop muted></video>
+      <div class="description">
+          <span>
+              <p>FLEUR D'AMOUR</p>
+              <p>EAU DE PARFUM</p>
+          </span>
+          <p>Des 56$</p>
+      </div>
+      <div class="commander">
+          <button> Découvrir </button>
+          <button class="ajouter-panier" id="bouton-4" data-prix="56" data-quantite="0"> Acheter </button>
+      </div>
+  </article>
+  
+  <article>
+      <h6>L'Intense - L'élégance incarnée en parfum</h6>
+      <video src="./image/bleu.webm" autoplay loop muted></video>
+      <div class="description">
+          <span>
+              <p>L'INTENSE</p>
+              <p>EAU DE TOILETTE</p>
+          </span>
+          <p>Des 222$</p>
+      </div>
+      <div class="commander">
+          <button> Découvrir </button>
+          <button class="ajouter-panier" id="bouton-5" data-prix="222" data-quantite="0"> Acheter </button>
+      </div>
+  </article>
+  
+  <article>
+      <h6>Sensualité - Captivez les sens avec cette fragrance envoûtante</h6>
+      <video src="./image/jaune.webm" autoplay loop muted></video>
+      <div class="description">
+          <span>
+              <p>SENSUALITÉ</p>
+              <p>EAU DE TOILETTE</p>
+          </span>
+          <p>Des 83$</p>
+      </div>
+      <div class="commander">
+          <button> Découvrir </button>
+          <button class="ajouter-panier" id="bouton-6" data-prix="83" data-quantite="0"> Acheter </button>
+      </div>
+  </article>
+  
+  <article>
+      <h6>Rêve Enchanté - Voyagez à travers les rêves avec cette fragrance enchanteresse</h6>
+      <video src="./image/noir.webm" autoplay loop muted></video>
+      <div class="description">
+          <span>
+              <p>RÊVE ENCHANTÉ</p>
+              <p>EAU DE TOILETTE</p>
+          </span>
+          <p>Des 44$</p>
+      </div>
+      <div class="commander">
+          <button> Découvrir </button>
+          <button class="ajouter-panier" id="bouton-7" data-prix="44" data-quantite="0"> Acheter </button>
+      </div>
+  </article>
+  <article>
+    <h6>Parfum Exclusif - L'essence du luxe ultime</h6>
+    <video src="./image/vert.webm" autoplay loop muted></video>
+    <div class="description">
+        <span>
+            <p>PARFUM EXCLUSIF</p>
+            <p>EAU DE PARFUM</p>
+        </span>
+        <p>Des 99$</p>
+    </div>
+    <div class="commander">
+        <button> Découvrir </button>
+        <button class="ajouter-panier" id="bouton-8" data-prix="99" data-quantite="0"> Acheter </button>
+    </div>
+</article>
+
+<article>
+    <h6>Féminité Absolue - Une expérience olfactive inoubliable</h6>
+    <video src="./image/rose.webm" autoplay loop muted></video>
+    <div class="description">
+        <span>
+            <p>FÉMINITÉ ABSOLUE</p>
+            <p>EAU DE TOILETTE</p>
+        </span>
+        <p>Des 120$</p>
+    </div>
+    <div class="commander">
+        <button> Découvrir </button>
+        <button class="ajouter-panier" id="bouton-9" data-prix="120" data-quantite="0"> Acheter </button>
+    </div>
+</article>
+</section>
+
+<div id="pub">
+   <p>
+    Dans <b>le jardin de Jean Paul Gaultier </b> , grande est la tentation de goûter à tous les plaisirs et de n’obéir qu’à un seul désir : y succomber. Rencontrer Le Beau en ce royaume ressemble au plus délectable des péchés. Son aura, ses lignes sculptées, a-t-on déjà respiré pareille splendeur ? Entre <b>Le Beau Eau de Toilette </b>, <b>Le Beau Le Parfum </b> et <b>Le Beau Paradise Garden </b>, lequel élire ? Le premier invite à un exotisme rafraîchissant, le second se pare d’une addiction nettement défendue, le troisième dévoile une nature libre et sauvage. <b style="color: red;">Tous sont irrésistibles.</b>
+  </p>
+
+  <span>
+    <img src="./image/plp-the-creator-tryptique-carousel-5.jpg"> 
+    <img src="./image/push-gaultier-celebre-les-differences.jpg"> 
+    <img src="./image/plp-the-creator-tryptique-carousel-8.jpg"> 
+  </span>
+</div>
+
         </main>
-        <script src="Js/search.js"></script>
+
+        <footer>
+          <div class="contact-info">
+              <h4>Contactez-nous</h4>
+              <p>Adresse: 123 Rue de la Parfumerie, Paris</p>
+              <p>Téléphone: +33 1 2345 6789</p>
+              <p>Email: info@jeanpaulgautier.com</p>
+          </div>
+  
+          <div class="references">
+              <h4>Références</h4>
+              <p>SIRET: 123456789</p>
+              <p>TVA Intracommunautaire: FR123456789</p>
+          </div>
+  
+          <div class="social-media">
+              <h4>Suivez-nous</h4>
+              <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+          </div>
+      </footer>
+        <script src="Js/notif.js"></script>
         
     </body>
 
