--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
           </div>
       </footer>
-        <script src="Js/notif.js"></script>
+        <script src="js/notif.js"></script>
         
     </body>
 
