--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <p>Des 76$</p>
       </div>
       <div class="commander">
-          <button a href="./css/decouvrir.html> Découvrir </button>
+          <button <a href="../html/decouvrir.html> Découvrir <a/> </button>
           <button class="ajouter-panier" id="bouton-1" data-prix="76" data-quantite="0"> Acheter </button>
       </div>
   </article>
