--- a/html/decouvrir.html
+++ b/html/decouvrir.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site webVersionning and Repository</title>
+    <title>Site web Versionning and Repository</title>
     <link rel="stylesheet" href="../css/decouvrir.css">
 </head>
 
@@ -14,9 +14,9 @@
         <img src="./image/JPG.png">
         <nav>
             <a href="#"><span>Catalogue </span></a>
-            <a href="#"><span>Homme </span></a>
-            <a href="#"><span>Femme </span></a>
-            <a href="#"><span>Meet-up </span></a>
+            <a href="#"><span>Parfums Homme </span></a>
+            <a href="#"><span>Parfums Femme </span></a>
+            <a href="#"><span>Evénements </span></a>
         </nav>
 
         <div class="">
