--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <div class="">
             <button><a href="#"><i class="fa-solid fa-magnifying-glass" id="recherche-btn"></i></a></button> 
             <button> <a href="#"><i class="fa-solid fa-user"></i></a></button> 
-            <button> <a href="#"><i class="fa-solid fa-shop"></i><i class="fa-sharp fa-solid fa-bell cloche  " style="color: #861d32; position: absolute; left:90.5% ;  top:20%;" ></i></button> 
+            <button> <a href="#"><i class="fa-solid fa-shop"></i><i class="fa-sharp fa-solid fa-bell cloche  " style="color: #861d32; position: absolute; left:90.5% ;  top:20%;" ></i>           <button> <a href="./html/formulaire.html" style="color: aliceblue;">Découvrir </a> </button>
+</button> 
             
             </div>
         </header>
@@ -34,7 +35,7 @@
            <aside>
 
               <video  src="./image/videoplayback.mp4" autoplay loop muted > </video>
-              <button id="catalogue"> <a href="#catalogue"> Decouvrez Jean Paul Gaultier <i class="fa-solid fa-arrow-right" style="color: #ff1a1a;"></i>  </a> </button>
+              <button id="catalogue"> <a href="#catalogue"> Decouvrez Jean Paul Gaultier <i class="fa-solid fa-arrow-right" style="color: #ff1a1a;"></i>   </a> </button>
            </aside>
            <h2>  JEAN PAUL GAULTIER GAULTIERPAUL GAULTIERPAUL GAULTIERPAUL GAULTIERPAUL GAULTIERPAUL GAULTIER</h2>
            <section >
