--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="">
             <button><a href="#"><i class="fa-solid fa-magnifying-glass" id="recherche-btn"></i></a></button> 
             <button> <a href="#"><i class="fa-solid fa-user"></i></a></button> 
-            <button> <a href="#"><i class="fa-solid fa-shop"></i><i class="fa-sharp fa-solid fa-bell cloche  " style="color: #861d32; position: absolute; left:90.5% ;  top:20%;" ></i>           <button> <a href="./html/formulaire.html" style="color: aliceblue;"> </a> </button>
+            <button> <a href="#"><i class="fa-solid fa-shop"></i><i class="fa-sharp fa-solid fa-bell cloche  " style="color: #861d32; position: absolute; left:90.5% ;  top:20%;" ></i>           <a href="./html/formulaire.html" style="color: aliceblue;"> </a>
 </button> 
             
             </div>
