correction des links js dans index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
-    <script src="/data/products.js"></script>
-    <script src="/js/ProductService.js"></script>
-    <script src="/js/CartManager.js"></script>
-    <script src="/js/IndexPage.js" defer></script>
+    <script src="data/products.js"></script>
+    <script src="js/ProductService.js"></script>
+    <script src="js/CartManager.js"></script>
+    <script src="js/IndexPage.js" defer></script>
 </head>
 <body>
 <header>
