Correction des problèmes avec les liens relatifs. Correction de l'oublie de la fermeture du "<a>" dans la nav bar.

--- a/html/decouvrir.html
+++ b/html/decouvrir.html
@@ -1,71 +1,84 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site web Versionning and Repository</title>
     <link rel="stylesheet" href="../css/decouvrir.css">
 </head>
-
 <body>
+<header>
+    <a href="../">
+        <img src="../image/JPG.png" alt="">
+    </a>
+    <nav>
+        <a href="#"><span>Catalogue </span></a>
+        <a href="#"><span>Parfums Homme </span></a>
+        <a href="#"><span>Parfums Femme </span></a>
+        <a href="#"><span>Evénements </span></a>
+    </nav>
 
-    <header>
-        <img src="./image/JPG.png">
-        <nav>
-            <a href="#"><span>Catalogue </span></a>
-            <a href="#"><span>Parfums Homme </span></a>
-            <a href="#"><span>Parfums Femme </span></a>
-            <a href="#"><span>Evénements </span></a>
-        </nav>
+    <div class="">
+        <button>
+            <a href="#">
+                <i class="fa-solid fa-magnifying-glass" id="recherche-btn"></i>
+            </a>
+        </button>
+        <button>
+            <a href="#">
+                <i class="fa-solid fa-user"></i>
+            </a>
+        </button>
+        <button>
+            <a href="#">
+                <i class="fa-solid fa-shop"></i>
+                <i class="fa-sharp fa-solid fa-bell cloche  "
+                   style="color: #861d32; position: absolute; left:86.5% ;  top:20%;"></i>
+            </a>
+        </button>
 
-        <div class="">
-            <button><a href="#"><i class="fa-solid fa-magnifying-glass" id="recherche-btn"></i></a></button>
-            <button> <a href="#"><i class="fa-solid fa-user"></i></a></button>
-            <button> <a href="#"><i class="fa-solid fa-shop"></i><i class="fa-sharp fa-solid fa-bell cloche  "
-                        style="color: #861d32; position: absolute; left:86.5% ;  top:20%;"></i></button>
+    </div>
+</header>
 
+<aside>
+    <main class="first-block">
+        <div class="block-top">
+            <article>
+                <h2>GAULTIER DIVINE
+                    EAU DE PARFUM</h2>
+                <h3>Eve de demain, Madone d’aujourd’hui, diva old-school, reine contemporaine…
+                    Jean-Paul Gaultier est toutes les femmes. Depuis 1976, il les habille et déshabille avec
+                    passion,
+                    pour
+                    embrasser
+                    avec le même amour toutes les cultures, toutes les beautés, et tous les corps. Dans le monde de
+                    Gaultier, les
+                    femmes sont humaines, divines, pleinement elles-mêmes et jouent à merveille avec les attributs
+                    du
+                    genre.
+                    Avec
+                    Gaultier Divine, le créateur célèbre leur puissance et leur singularité, en révélant leur part
+                    de
+                    divinité. Vêtu
+                    d’un corset précieux, son flacon renferme le plus solaire des parfums : un lys majestueux à la
+                    Gaultier,
+                    une
+                    meringue aérienne, un frais baiser salé. Quoi de plus divin qu‘être femme ?</h3>
+            </article>
         </div>
-    </header>
-
-    <aside>
-        <main class="first-block">
-            <div class="block-top">
-                <article>
-                    <h2>GAULTIER DIVINE
-                        EAU DE PARFUM</h2>
-                    <h3>Eve de demain, Madone d’aujourd’hui, diva old-school, reine contemporaine…
-                        Jean-Paul Gaultier est toutes les femmes. Depuis 1976, il les habille et déshabille avec
-                        passion,
-                        pour
-                        embrasser
-                        avec le même amour toutes les cultures, toutes les beautés, et tous les corps. Dans le monde de
-                        Gaultier, les
-                        femmes sont humaines, divines, pleinement elles-mêmes et jouent à merveille avec les attributs
-                        du
-                        genre.
-                        Avec
-                        Gaultier Divine, le créateur célèbre leur puissance et leur singularité, en révélant leur part
-                        de
-                        divinité. Vêtu
-                        d’un corset précieux, son flacon renferme le plus solaire des parfums : un lys majestueux à la
-                        Gaultier,
-                        une
-                        meringue aérienne, un frais baiser salé. Quoi de plus divin qu‘être femme ?</h3>
-                </article>
-            </div>
-            <div class="block-bottom">
-                <article>
-                    <h3>LE FLACON</h3>
-                    <h4>
-                        Conique et déjà iconique, le corset Gautier Divine réinterprète avec audace la création couture
-                        emblématique de Jean Paul Gaultier, symbole de libération féminine. Bien plus qu’une pièce de
-                        lingerie intime, sa silhouette d’or aux courbes généreuses défie les diktats et honore le corps
-                        de
-                        la femme dans toute sa multiplicité. Une féminité confiante et sans complexe, qui a le pouvoir
-                        d’être elle-même.
-                </article>
+        <div class="block-bottom">
+            <article>
+                <h3>LE FLACON</h3>
+                <h4>
+                    Conique et déjà iconique, le corset Gautier Divine réinterprète avec audace la création couture
+                    emblématique de Jean Paul Gaultier, symbole de libération féminine. Bien plus qu’une pièce de
+                    lingerie intime, sa silhouette d’or aux courbes généreuses défie les diktats et honore le corps
+                    de
+                    la femme dans toute sa multiplicité. Une féminité confiante et sans complexe, qui a le pouvoir
+                    d’être elle-même.
                 </h4>
-            </div>
-
+            </article>
+        </div>
+    </main>
+</aside>
 </body>
