--- a/index.html
+++ b/index.html
@@ -27,11 +27,23 @@
         <input type="search">
     </form>
     <div class="">
-        <button><a href="#"><i class="fa-solid fa-magnifying-glass" id="recherche-btn"></i></a></button>
-        <button><a href="#"><i class="fa-solid fa-user"></i></a></button>
-        <button><a href="html/pannier.html"><i class="fa-solid fa-shop"></i><i
-                class="fa-sharp fa-solid fa-bell cloche  "
-                style="color: #861d32; position: absolute; left:90.5% ;  top:20%;"></i></button>
+        <button>
+            <a href="#">
+                <i class="fa-solid fa-magnifying-glass" id="recherche-btn"></i>
+            </a>
+        </button>
+        <button>
+            <a href="#">
+                <i class="fa-solid fa-user"></i>
+            </a>
+        </button>
+        <button>
+            <a href="html/pannier.html">
+                <i class="fa-solid fa-shop"></i>
+                <i class="fa-sharp fa-solid fa-bell cloche "
+                   style="color: #861d32; position: absolute; left:90.5% ; top:20%;"></i>
+            </a>
+        </button>
     </div>
 </header>
 <main>
@@ -47,6 +59,7 @@
     <h2> JEAN PAUL GAULTIER GAULTIERPAUL GAULTIERPAUL GAULTIERPAUL GAULTIERPAUL GAULTIERPAUL GAULTIER</h2>
 
     <section id="article-list">
+        <!-- Les produits sont injectés avec IndexPage.js -->
     </section>
 
     <div id="pub">
