--- a/html/pannier.html
+++ b/html/pannier.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container">
     <div class="shopping-cart">
-        <a href="/index.html" class="continue-shopping">
+        <a href="../" class="continue-shopping">
             <img src="../image/shopping.png" alt="Continue Shopping">
             Continuer les achats
         </a>
